# No41_work_bi_cursor

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml
.reports/: codemap-diff.txt  documentation-update-summary.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: audit_logs.py  auth.py  cards.py  chatbot.py  dashboard_shares.py  dashboards.py  datasets.py  filter_views.py  groups.py  test_setup.py  transforms.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: dynamodb.py  s3.py
backend/app/models/: audit_log.py  card.py  dashboard.py  dataset.py  group.py  transform.py  user.py
backend/app/services/: audit_log_service.py  cache_service.py  card_service.py  chatbot_service.py  dashboard_service.py  dashboard_share_service.py  dataset_service.py  filter_view_service.py  group_service.py  transform_service.py  user_service.py
backend/tests/: conftest.py  test_audit_logs.py  test_auth.py  test_cache_service.py  test_cards.py  test_chatbot.py  test_config.py  test_dashboard_shares.py  test_dashboards.py  test_datasets.py  test_dynamodb.py  test_filter_views.py  test_groups.py  test_health.py  test_middleware.py  test_s3.py  test_security.py  test_transforms.py  test_users.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
docs/: CONTRIB.md  RUNBOOK.md  SCRIPTS.md  api-spec.md  design.md  mvp-implementation-status.md  mvp-readiness-summary.md  mvp-smoke-test-results.md  requirements.md  (+3 more)
(+151 files in other folders)
